implemented cascade remove for votes over post delete
