# docs/swagger.yaml
@@ -1,10 +1,71 @@
-basePath: 
+basePath: /api/v1
 definitions:
   handler.AuthHandler:
     type: object
   handler.PostHandler:
     type: object
   handler.VoteHandler:
+    type: object
+  model.Post:
+    properties:
+      cachedScore:
+        type: integer
+      content:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: integer
+      title:
+        type: string
+      updatedAt:
+        type: string
+      user:
+        $ref: '#/definitions/model.User'
+      userID:
+        type: integer
+      votes:
+        items:
+          $ref: '#/definitions/model.Vote'
+        type: array
+    type: object
+  model.User:
+    properties:
+      createdAt:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      passwordHash:
+        type: string
+      posts:
+        items:
+          $ref: '#/definitions/model.Post'
+        type: array
+      updatedAt:
+        type: string
+      username:
+        type: string
+      votes:
+        items:
+          $ref: '#/definitions/model.Vote'
+        type: array
+    type: object
+  model.Vote:
+    properties:
+      createdAt:
+        type: string
+      post:
+        $ref: '#/definitions/model.Post'
+      postID:
+        type: integer
+      user:
+        $ref: '#/definitions/model.User'
+      userID:
+        type: integer
+      voteValue:
+        type: integer
     type: object
 host: localhost:8080
 info:
@@ -198,6 +259,44 @@ paths:
       security:
       - BearerAuth: []
       summary: Update a post
+      tags:
+      - posts
+  /posts/top:
+    get:
+      description: Get top posts filtered by time range
+      parameters:
+      - default: day
+        description: Time range filter
+        enum:
+        - day
+        - week
+        - month
+        - all
+        in: query
+        name: time
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Post'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get top posts
       tags:
       - posts
   /signout:
